fixed post creator no body content error display, added hidden state and visible after content loaded

--- a/frontend/static/css/postcreator.css
+++ b/frontend/static/css/postcreator.css
@@ -107,3 +107,12 @@ textarea{
     transform: scale(1.15);
 }
 
+.error{
+    background: red;
+    color: white;
+    font-size: 1.4rem;
+    border-radius: var(--br);
+    padding: 1rem;
+    box-sizing: border-box;
+    height: auto;
+  }
